exploring item tree

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -42,12 +42,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rq = requests.get(compstat_url)\n",
-    "webpage = rq.text"
+    "dashboard_html = requests.get(compstat_url).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(dashboard_html, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "html\n",
+      "head\n",
+      "base\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "link\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "title\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "meta\n",
+      "style\n",
+      "link\n",
+      "noscript\n",
+      "link\n",
+      "body\n",
+      "app-root\n",
+      "script\n",
+      "script\n",
+      "script\n"
+     ]
+    }
+   ],
+   "source": [
+    "for child in soup.descendants:\n",
+    "    if child.name:\n",
+    "        print(child.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup.find('meta', attrs={'class': 'k-grid-container'}))"
    ]
   }
  ],
